--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@
  * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
  * User Manual available at https://docs.gradle.org/7.4/userguide/building_java_projects.html
  */
-
 plugins {
     // Apply the groovy plugin to also add support for Groovy (needed for Spock)
     id 'groovy'
 
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
 repositories {
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
 
     implementation 'io.lettuce:lettuce-core:6.1.6.RELEASE'
+    implementation 'com.newrelic.agent.java:newrelic-api:7.5.0'
+    implementation fileTree(include: ['*.jar'], dir: '../libs')
 }
 
 application {
@@ -41,4 +43,22 @@ application {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+run {
+    //jvmArgs = ["-Dnewrelic.config.file=/Users/tcrone/lib/nrjars/conf/synchronized.yml", "-Dnewrelic.environment=staging", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005", "-javaagent:/Users/tcrone/lib/nrjars/newrelic-agent-7.6.0-13353-2-SNAPSHOT.jar"]
+    //jvmArgs = ["-Dnewrelic.config.file=/Users/tcrone/lib/nrjars/conf/not-synchronized.yml", "-Dnewrelic.environment=staging", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005", "-javaagent:/Users/tcrone/lib/nrjars/newrelic-agent-7.6.0-SNAPSHOT-not-synchronized.jar"]
+    jvmArgs = ["-Dnewrelic.environment=staging",
+               "-Dnewrelic.config.file=${projectDir}/newrelic.yml",
+               "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005",
+               "-javaagent:/Users/tcrone/lib/nrjars/newrelic-agent-7.6.0.jar"]
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': "lettuce.demo.App"
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
